feat(controllers) : give more filters for /api/users
